Reader: fix post and byline overlapping if byline is long in Search photo card

--- a/client/components/post-card/style.scss
+++ b/client/components/post-card/style.scss
@@ -88,7 +88,7 @@
 	}
 
 	&.is-photo {
-		height: 168px;
+		min-height: 168px;
 		padding: 20px;
 
 		&:before{
@@ -110,8 +110,12 @@
 		.post-card__search-title-link {
 			color: $white;
 			padding-right: 20px;
-			position: absolute;
-				bottom: 43px;
+			position: relative;
+				top: 80px;
+
+				@include breakpoint( "<480px" ) {
+					top: 100px;
+				}
 
 			&:hover {
 				opacity: .8;
@@ -119,8 +123,12 @@
 		}
 
 		.post-card__search-byline {
-			position: absolute;
-				bottom: 10px;
+			position: relative;
+				top: 80px;
+
+				@include breakpoint( "<480px" ) {
+					top: 100px;
+				}
 
 			a,
 			a:visited {
@@ -200,14 +208,14 @@
 		bottom: 0;
 		left: 0;
 		top: 0;
-	width: 230px;
+	width: 90px;
 
 	@include breakpoint( "660px-960px" ) {
 		width: 115px;
 	}
 
-	@include breakpoint( "<480px" ) {
-		width: 90px;
+	@include breakpoint( ">480px" ) {
+		width: 230px;
 	}
 }
 
@@ -230,16 +238,16 @@
 	font-size: 13px;
 	list-style: none;
 	margin: 6px 0;
-	padding: 0;
+	padding-bottom: 10px;
+
+	@include breakpoint( ">480px" ) {
+		padding-bottom: 20px;
+	}
 
 	.gravatar {
 		vertical-align: text-bottom;
 		margin: 0 4px 0 0;
 	}
-}
-
-.post-card__search-byline-item {
-	display: inline-block;
 }
 
 .post-card__author-and-site {
